--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "prepare": "husky install",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
+  "files": [
+    "index.js"
+  ],
   "keywords": [
     "cnpj",
     "validar",
